# resto_client

./: .gitattributes  .gitignore  README.md  readthedocs.yaml  setup.cfg  setup.py
.github/workflows/: pythonpublish.yml
doc/doc_sphinx/: resto_client_requirements.txt  sphinx_requirements.txt
resto_client/: base_exceptions.py  version.py
resto_client/cli/: cli_utils.py  parser_common.py  parser_configure_server.py  parser_download.py  parser_search.py  parser_set.py  parser_show.py  parser_unset.py  persistence.py  resto_client_cli.py  resto_client_parameters.py  resto_client_parser.py  resto_client_settings.py  resto_server_parameters.py  resto_server_persistable.py  resto_server_persisted.py  server_parameters.py
resto_client/entities/: resto_collection.py  resto_collections.py  resto_criteria.py  resto_criteria_definition.py  resto_feature.py  resto_feature_collection.py  resto_license.py  resto_statistics.py
resto_client/functions/: aoi_utils.py  collections_functions.py  feature_functions.py  resto_criteria.py  utils.py
resto_client/generic/: basic_types.py  property_decoration.py  user_dirs.py
resto_client/requests/: anonymous_request.py  authentication_optional_request.py  authentication_requests.py  authentication_required_request.py  authenticator.py  base_request.py  collections_requests.py  features_requests.py  resto_json_request.py  service_requests.py  utils.py
resto_client/responses/: authentication_responses.py  collection_description.py  collections_description.py  download_error_response.py  feature_collection_response.py  resto_json_response.py  resto_response.py  resto_response_error.py  sign_license_response.py
resto_client/services/: application_service.py  authentication_account.py  authentication_credentials.py  authentication_service.py  authentication_token.py  authentication_token_service.py  base_service.py  resto_collections_manager.py  resto_server.py  resto_service.py  service_access.py
resto_client/settings/: dict_settings.py  persistence.py  resto_client_config.py  resto_client_parameters.py  resto_client_settings.py  servers_database.py
resto_client/zones/: Alpes.geojson  Alsace.geojson  (+2 more)
resto_client_tests/: resto_client_cli_test.py
(+39 files in other folders)
