# -*- coding: utf-8 -*-
#
#  Copyright 2019 CNES
#
#  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
#  in compliance with the License. You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software distributed under the License
#  is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
#  or implied. See the License for the specific language governing permissions and
#  limitations under the License.

[metadata]
name = resto_client
version = attr: resto_client.version.__version__
author = Agwilh Collet, Alain Giros
author-email = Agwilh.Collet@cnes.fr, Alain.Giros@cnes.fr
url = https://github.com/CNES/resto_client
description = Library and CLI interface for accessing resto servers
long-description = file: README.md
long_description_content_type= text/markdown
license-file = LICENSE
platform = any
keywords: resto,remote sensing,theia,peps
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Typing :: Typed

[options]
python_requires =
    >=3.6

setup_requires =
    setuptools >=38.3

install_requires =
    requests
    tqdm
    geojson
    ptable
    appdirs
    shapely
    colorama

package_dir = 
    . = resto_client
packages = find:

[options.package_data]
* = zones/*.geojson

[options.entry_points]
console_scripts =
    resto_client = resto_client.cli.resto_client_cli:main

[bdist_wheel]
universal = false

[build_sphinx]
project = resto_client
source-dir = ./doc/doc_sphinx/source
config-dir = ./doc/doc_sphinx/source
build-dir = ./dist/sphinx
